[#8]; refactor: get(0)의 메서드를 안전한 getFirst() 방식으로 구조 변경